# Courses

Algorithms/ColoringGraph/: CMakeLists.txt
Algorithms/PrattParsing/: .gitignore  CMakeLists.txt  build.sh  main.cpp
Algorithms/PrattParsing/expression/: CMakeLists.txt  expression.cpp  expression.hpp
Algorithms/PrattParsing/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
Algorithms/PrattParsing/token/: CMakeLists.txt  token.hpp
